# robotics-studio-open

./: .gitattributes  .gitignore  .vercelignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  security-review.md  telemetry.md  tsconfig.json  vercel.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  settings.yml
crates/auraone-platform-keychain/: Cargo.toml
crates/auraone-platform-keychain/src/: lib.rs
docs/: adapters.md  architecture.md  failure-clustering.md  hf-export.md  intake.md  quickstart.md  shortcuts.md  vla-probe.md
opensource/embodiment-card/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
opensource/embodiment-card/.github/workflows/: ci.yml
opensource/embodiment-card/examples/: mock_humanoid_card.json  mock_mobile_manipulator_card.json  mock_so101_card.json  mock_so101_card.md
opensource/embodiment-card/spec/: embodiment-card-schema-v1.json
opensource/embodiment-card/src/embodiment_card/: __init__.py  cli.py  generator.py  hf_readme.py  render.py  schema.py
opensource/embodiment-card/tests/: test_render.py  test_schema.py
opensource/failure-gallery/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
opensource/failure-gallery/.github/workflows/: ci.yml
opensource/failure-gallery/cases/agent_schema_drift/: case.json
opensource/failure-gallery/cases/agent_tool_loop/: case.json
opensource/failure-gallery/cases/agent_trace_missing_decision/: case.json
opensource/failure-gallery/cases/mcp_destructive_tool/: case.json
opensource/failure-gallery/cases/otel_trace_privacy_leak/: case.json
opensource/failure-gallery/cases/prompt_rubric_drift/: case.json
opensource/failure-gallery/cases/robot_camera_shift_brittle/: case.json
opensource/failure-gallery/cases/robot_low_quality_episode/: case.json
opensource/failure-gallery/cases/robot_missing_coordinate_frame/: case.json
opensource/failure-gallery/cases/robot_recovery_missing_label/: case.json
opensource/failure-gallery/cases/robot_sensor_desync/: case.json
opensource/failure-gallery/cases/vla_instruction_paraphrase_failure/: case.json
opensource/failure-gallery/site/: index.html
opensource/failure-gallery/src/failure_gallery/: __init__.py  cli.py  render.py  validate.py
opensource/failure-gallery/tests/: test_cases_validate.py
opensource/lerobot-quality-gates/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml
opensource/lerobot-quality-gates/docs/: github-action.md  hf-dataset-card.md  quality-gates.md
opensource/lerobot-quality-gates/examples/mock_lerobot_v3_bad/: README.md
opensource/lerobot-quality-gates/examples/mock_lerobot_v3_bad/meta/: episodes.json  info.json
opensource/lerobot-quality-gates/examples/mock_lerobot_v3_good/: README.md
opensource/lerobot-quality-gates/examples/mock_lerobot_v3_good/data/chunk-000/: episode_000.json  episode_001.json
opensource/lerobot-quality-gates/examples/mock_lerobot_v3_good/meta/: episodes.json  info.json
opensource/lerobot-quality-gates/src/lerobot_quality_gates/: __init__.py  badge.py  cli.py  dataset_loader.py  findings.py  report.py
opensource/lerobot-quality-gates/src/lerobot_quality_gates/checks/: __init__.py  actions.py  cards.py  episodes.py  interventions.py  metadata.py  sensors.py  video.py
opensource/lerobot-quality-gates/tests/: test_lerobot_quality_gates.py
opensource/robostudio-engine/: README.md  pyproject.toml
opensource/robostudio-engine/examples/mock_multi_format/hdf5/: episode_000.hdf5  hdf5_manifest.json
opensource/robostudio-engine/examples/mock_multi_format/lerobot_v2/meta/: episodes.jsonl  info.json
opensource/robostudio-engine/examples/mock_multi_format/lerobot_v3/: README.md
opensource/robostudio-engine/examples/mock_multi_format/lerobot_v3/.robostudio/: index.sqlite
opensource/robostudio-engine/examples/mock_multi_format/lerobot_v3/meta/: episodes.json  info.json
opensource/robostudio-engine/examples/mock_multi_format/mp4_jsonl/: capture_000.jsonl
opensource/robostudio-engine/examples/mock_multi_format/openx/: episodes.jsonl  openx_manifest.json
opensource/robostudio-engine/examples/mock_multi_format/rlds/: dataset_info.json  episodes.jsonl
opensource/robostudio-engine/examples/plugins/hdf5_force_panel/: adapter.py  manifest.json  panel.tsx
opensource/robostudio-engine/src/robostudio_engine/: __init__.py  adapters.py  clustering.py  contracts.py  embodiment.py  exporters.py  exports.py  hardware_decode.py  index.py  indexer.py  plugins.py  qa.py  runners.py  sensor_qa.py  thumbnails.py  vla.py
opensource/robostudio-engine/src/robostudio_engine/adapters/: __init__.py  base.py  folder_mp4_jsonl.py  hdf5.py  lerobot.py  openx.py  rlds.py  rosbag.py
opensource/robostudio-engine/src/robostudio_engine/cli/: main.py
opensource/robostudio-engine/tests/: test_adapters_index.py  test_cli.py  test_engine_features.py  test_engine_smoke.py  test_security_exports.py  test_security_fuzz_smoke.py
opensource/robot-recovery-bench/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
opensource/robot-recovery-bench/.github/workflows/: release-python.yml
opensource/robot-recovery-bench/examples/: mock_invalid_segments.jsonl  mock_recovery_segments.jsonl  mock_report.md
opensource/robot-recovery-bench/spec/: recovery-segment-schema-v1.json  recovery-taxonomy.yaml
opensource/robot-recovery-bench/src/robot_recovery_bench/: __init__.py  cli.py  lerobot_adapter.py  metrics.py  report.py  rlds_adapter.py  validate.py
opensource/robot-recovery-bench/tests/: test_robot_recovery_bench.py
public/: Robotics Studio.html  site.webmanifest
release/: homebrew-cask.rb  install.sh  launch-blockers-2026-05-13.md  (+2 more)
src/: App.tsx  (+16 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+183 files in other folders)
