[workspace]
members = ["crates/auraone-platform-keychain"]
exclude = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/auraoneai/robotics-studio-open"
rust-version = "1.78"

[workspace.dependencies]
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
thiserror = "1.0"
