[package]
name = "robotics-studio-open"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust core contracts for Robotics Studio Open."
build = "build.rs"
default-run = "robotics-studio-open"

[lib]
name = "robotics_studio_core"
path = "src/lib.rs"

[[bin]]
name = "robotics-studio-open"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2.10.1"
