[package]
name = "robotics-studio-open"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Source-build Rust contracts for Robotics Studio Open."

[features]
default = []
tauri-runtime = ["tauri", "tauri-plugin-deep-link", "tauri-plugin-updater"]

[lib]
name = "robotics_studio_core"
path = "src/lib.rs"

[[bin]]
name = "robotics-studio-open"
path = "src/main.rs"

[dependencies]
auraone-platform-keychain = { path = "../crates/auraone-platform-keychain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", optional = true, features = [] }
tauri-plugin-deep-link = { version = "2.4.9", optional = true }
tauri-plugin-updater = { version = "2.10.1", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
