[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "failure-gallery"
version = "0.1.0"
description = "Synthetic gallery of reproducible agent and robotics failure cases."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AuraOne", email = "opensource@auraone.ai" }]
keywords = ["agents", "robotics", "failures", "evals", "synthetic-data"]

[project.scripts]
failure-gallery = "failure_gallery.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

